--- a/app/src/main/res/layout/elemento_progress_splash.xml
+++ b/app/src/main/res/layout/elemento_progress_splash.xml
@@ -1,5 +1,5 @@
 <ProgressBar
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminateDrawable="@drawable/progressbar_custom"
-        xmlns:android="http://schemas.android.com/apk/res/android" android:padding="60dp"/>
+        android:indeterminateDrawable="@drawable/progressbar_custom" android:padding="60dp"/>
